GNOME Bugzilla – Bug 771792
nlesource: Fail prepare() if no valid source pad is found
Last modified: 2016-09-30 07:05:42 UTC
See commit message. Otherwise this just fails in weird and hard to debug ways later.
Created attachment 336037 [details] [review] nlesource: Fail prepare() if no valid source pad is found
Review of attachment 336037 [details] [review]: Go ahead
Attachment 336037 [details] pushed as 5a0731a - nlesource: Fail prepare() if no valid source pad is found