nlesource: Fail prepare() if no valid source pad is found

https://bugzilla.gnome.org/show_bug.cgi?id=771792